# byor

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  RELEASING.md  SPEC.md  package.json  pyproject.toml  sgconfig.yml  tsconfig.json
.byor/: config.yml
.byor/rule-tests/: keyword-only-args-test.yml  no-routing-functions-test.yml  python.no-error-swallowing-return-test.yml  python.no-eval-test.yml  python.no-exec-test.yml  python.no-importlib-test.yml  python.no-staticmethod-test.yml  python.prefer-functions-over-namespace-class-test.yml  python.prefer-protocol-over-abc-test.yml  python.prefer-pytest-over-unittest-test.yml  python.question-mocks-test.yml  python.require-class-attribute-annotations-test.yml
.byor/rules/personal/local/: .ignore
.byor/rules/project/: keyword-only-args.yml  no-broad-except.yml  no-routing-functions.yml  python.no-error-swallowing-return.yml  python.no-eval.yml  python.no-exec.yml  python.no-importlib.yml  python.no-staticmethod.yml  python.no-typing-cast.yml  python.prefer-functions-over-namespace-class.yml  python.prefer-modern-typing.yml  python.prefer-protocol-over-abc.yml  python.prefer-pytest-over-unittest.yml  python.question-mocks.yml  python.require-class-attribute-annotations.yml  python.require-function-return-type.yml  python.require-parameter-annotations.yml
.byor/scripts/: .gitignore  module-contract.py  no-suppression-comments.py  no-thin-docstrings.py  ruff.py  ruff.sh
.byor/scripts/lib/: pyfiles.py
.github/workflows/: byor-gate.yml  ci.yml  release.yml
docs/: ai-agents.md  rules.md  sync-model.md
examples/: README.md  sgconfig.yml
examples/command-rule-tests/: no-force-push-test.yml  no-pip-install-test.yml  prefer-rg-test.yml
examples/command-rules/: no-force-push.yml  no-pip-install.yml  prefer-rg.yml
examples/config/: config.yml
examples/config/scripts/: dependency-gate.sh  protect-ssh.sh  ruff.sh  uv-lock-guard.sh
examples/rule-tests/: keyword-only-args-test.yml  no-console-log-test.yml  no-print-test.yml  no-python-cast-test.yml  no-requests-test.yml  no-routing-functions-test.yml  no-type-suppression-test.yml  python.no-typing-cast-test.yml
examples/rules/: keyword-only-args.yml  no-console-log.yml  no-print.yml  no-python-cast.yml  no-requests.yml  no-routing-functions.yml  no-type-suppression.yml  python.no-typing-cast.yml
scripts/: sync_version.py
src/byolsp/: __init__.py  agent_check.py  agents.py  astgrep.py  checks.py  cli.py  config.py  doctor.py  errors.py  fsio.py  githooks.py  harness.py  ignore.py  init.py  linescope.py  listing.py  opencode.py  paths.py  rule_commands.py  rules.py  sgconfig.py  skill.py  sync.py  yamlio.py
src/byor/: __init__.py  agent_check.py  agents.py  astgrep.py  checks.py  cli.py  config.py  doctor.py  errors.py  githooks.py  gitio.py  hookconfig.py  ignore.py  init.py  linescope.py  listing.py  opencode.py  paths.py  rule_commands.py  rules.py  sgconfig.py  skill.py  sync.py  yamlio.py
src/byor/agents/: __init__.py  harness.py  hookconfig.py  install.py  opencode.py  pi.py
src/byor/commands/: __init__.py  disable.py  doctor.py  gate.py  heal.py  init.py  install.py  listing.py  package.py  profile.py  prompts.py  rules.py
src/byor/data/: skill.md
src/byor/data/agents/: harness-types.d.ts  opencode-plugin.ts  pi-extension.ts
src/byor/data/skill/: SKILL.md
src/byor/data/skill/references/: checks.md  commands.md  packages.md  patterns.md  profiles.md  setup.md
src/byor/io/: __init__.py  fsio.py  gitio.py  output.py  paths.py  yamlio.py
src/byor/rules/: __init__.py  commands.py  rules.py  skill.py  sync.py
src/byor/scaffold/: __init__.py  ci.py  githooks.py  ignore.py  precommit.py  sgconfig.py
src/byor/scan/: __init__.py  agent_check.py  astgrep.py  checks.py  command_check.py  linescope.py
tests/: conftest.py  support.py  test_add.py  test_agent_check.py  test_astgrep.py  test_check_scripts.py  test_checks.py  test_cli.py  test_config.py  test_doctor.py  test_edit.py  test_exclude_include.py  test_fsio.py  test_git_visibility.py  test_githooks.py  test_harness.py  test_hookconfig.py  test_hooks.py  test_ignore.py  test_init.py  test_linescope.py  test_list.py  test_opencode.py  test_paths.py  test_promote.py  test_remove.py  test_rules.py  test_sgconfig.py  test_skill.py  test_sync.py  test_yamlio.py
tests/agents/: test_harness.py  test_hookconfig.py  test_hooks.py  test_opencode.py  test_pi.py  test_registry.py  test_skill.py
tests/commands/: test_add.py  test_disable.py  test_doctor.py  test_edit.py  test_gate.py  test_init.py  test_install.py  test_list.py  test_package.py  test_profile.py  test_promote.py  test_remove.py
tests/io/: test_fsio.py  test_gitio.py  test_paths.py  test_yamlio.py
tests/rules/: test_add.py  test_edit.py  test_exclude_include.py  test_packages_sync.py  test_promote.py  test_remove.py  test_rules.py  test_skill.py  test_sync.py
tests/scaffold/: test_githooks.py  test_ignore.py  test_sgconfig.py
tests/scan/: test_agent_check.py  test_astgrep.py  test_checks.py  test_command_check.py  test_linescope.py
