[project]
name = "byor"
version = "0.2.0"
description = "Build Your Own Rules: define code checks (ast-grep rules, linters, type checkers, scripts) once, and have your terminal, editor, and AI agents enforce them"
readme = "README.md"
authors = [
    { name = "Ryan Saxe", email = "ryancsaxe+1@gmail.com" }
]
requires-python = ">=3.11"
license = "Apache-2.0"
license-files = ["LICENSE"]
keywords = ["ast-grep", "linter", "ai", "coding-agent", "diagnostics", "static-analysis"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "ast-grep-cli>=0.42.3",
    "ruamel-yaml>=0.18",
]

[project.urls]
Homepage = "https://github.com/RyanSaxe/byor"
Repository = "https://github.com/RyanSaxe/byor"
Issues = "https://github.com/RyanSaxe/byor/issues"

[project.scripts]
byor = "byor.cli:main"

[build-system]
requires = ["uv_build>=0.11.16,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.17",
    "ty>=0.0.49",
]

[tool.ruff.lint]
extend-select = ["I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["tests"]
