[project]
name = "byor"
version = "0.2.0"
description = "Build Your Own Rules: define code checks (ast-grep rules, linters, type checkers, scripts) once, and have your terminal, editor, and AI agents enforce them"
readme = "README.md"
authors = [
    { name = "Ryan Saxe", email = "ryancsaxe+1@gmail.com" }
]
requires-python = ">=3.11"
license = "Apache-2.0"
license-files = ["LICENSE"]
keywords = ["ast-grep", "linter", "ai", "coding-agent", "diagnostics", "static-analysis"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "ast-grep-cli>=0.42.3",
    "ruamel-yaml>=0.18",
]

[project.urls]
Homepage = "https://github.com/RyanSaxe/byor"
Repository = "https://github.com/RyanSaxe/byor"
Issues = "https://github.com/RyanSaxe/byor/issues"

[project.scripts]
byor = "byor.cli:main"

[build-system]
requires = ["uv_build>=0.11.16,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.17",
    "ty>=0.0.49",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["ALL"]
unfixable = [
    # Leave unused imports visible for the agent to review instead of deleting
    # them during autofix; import removals can change public/API intent.
    "F401",
]
ignore = [
    # Not a personal code-quality rule; legal headers are project-specific.
    "CPY001",
    # Standalone scripts and scratch modules are valid in many projects.
    "INP001",
    # BYOR owns module-docstring format and public export checks.
    "D100",
    "D104",
    # Do not require docstrings on every public class/function/method.
    "D101",
    "D102",
    "D103",
    "D105",
    "D106",
    "D107",
    # Known pydocstyle and formatter conflicts.
    "D203",
    "D213",
    "COM812",
    "ISC001",
    # BYOR's keyword-only rule allows many keyword-only parameters.
    "PLR0913",
    # BYOR intentionally shells out to git, ast-grep, Ruff, ty, and configured checks.
    "S603",
]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.pylint]
max-positional-args = 2

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    # Pytest's assertion introspection is the test framework contract.
    "S101",
    # Test literals are part of the expected behavior being documented.
    "PLR2004",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["tests"]
